--- a/index.css
+++ b/index.css
@@ -18,6 +18,14 @@ body {
   box-sizing: border-box;
 }
 
+.container-desktop {
+  margin-left: 8%;
+}
+
+.container-mobile {
+  display: none;
+}
+
 .link {
   color: #111;
   text-decoration: none;
@@ -56,6 +64,11 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 17px;
+  transition: opacity 0.2s ease-in;
+}
+
+.header__list_item:hover {
+  opacity: 0.5;
 }
 
 /* Мэйн */
@@ -83,14 +96,38 @@ body {
   margin: 0px 120px 0px 15%;
   padding: 0;
   display: flex;
+  align-items: flex-start;
 }
 
 .plug__info {
+  margin: 0;
   max-width: 342px;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 22px;
+}
+
+.contacts__list {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 0 30px;
+}
+
+.contacts__list_item {
+  color: #e7411b;
+  margin-bottom: 10px;
+  transition: all 0.2s ease-in;
+}
+
+.contacts__list_item:hover {
+  transform: scale(1.1);
+}
+
+.contacts__list_item-phone {
+  color: #e7411b;
+  text-decoration: none;
+  font-weight: 700;
 }
 
 .volvo {
@@ -102,4 +139,80 @@ body {
   margin: 0 auto;
   overflow: hidden;
   z-index: -1;
+}
+
+@media screen and (min-width: 1900px) {
+  .container-desktop {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 1140px) {
+  .header {
+    padding: 0;
+  }
+  .header__menu {
+    margin: 40px 10px 85px 12%;
+  }
+}
+
+@media screen and (max-width: 890px) {
+  .container-desktop {
+    display: none;
+  }
+
+  .container-mobile {
+    display: block;
+  }
+
+  .header__logo {
+    width: 150px;
+    height: 140px;
+    left: -15px;
+  }
+
+  .nav__contacts {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .contacts__list {
+    display: block;
+    margin: 22px 0 0 40%;
+  }
+
+  .title {
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 50px;
+
+    margin: 86px 0 36px 8px;
+  }
+
+  .container__plug {
+    margin: 0 0 8px;
+    max-width: 290px;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .header__logo {
+    width: 110px;
+    height: 100px;
+    left: -10px;
+  }
+
+  .title {
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 50px;
+
+    margin: 66px 0 36px 8px;
+  }
+
+  .container__plug {
+    margin: 0px 0 0 8px;
+  }
 }
