--- a/index.css
+++ b/index.css
@@ -18,34 +18,49 @@ body {
   box-sizing: border-box;
 }
 
-.container__number {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  margin: -100px auto 0;
+a {
+  outline: none;
+  text-decoration: none;
 }
 
-@media screen and (max-width: 1700px) {
-  .container__number {
-    margin: 0px auto 0;
-  }
+.main__menu_item {
+  color: #8e8e8e;
+}
+
+.container {
+  margin-left: 8%;
+}
+
+.header__menu_main {
+  margin: 40px 120px 0px 15%;
+}
+
+.container__number {
+  margin: 0px 120px 85px 15%;
 }
 
 .main__number {
+  width: 977px; /*проверить адапитвность*/
   position: relative;
   color: #E7411B;
   font-size: 400px;
-  line-height: 480px;
+  line-height: 364px;
   font-weight: 500;
   z-index: -1;
 }
 
+
+.j-main__number {
+  position: relative;
+}
+
 .icon__info {
+  backdrop-filter: blur(5px);
   position: absolute;
-  top:22%;
+  top: 15%;
   left: 0;
+  cursor: pointer;
   text-align: center;
-  cursor: none;
   width: 50px;
   height: 50px;
   background-image: url('./images/icon-info.svg');
@@ -54,4 +69,69 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 43px;
+  transition: all 0.3s ease-in;
+}
+
+.icon__description {
+  display: none;
+  max-width: 320px;
+
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 17px;
+}
+
+.icon__info:hover .icon__description {
+  display: block;
+}
+
+.main__text {
+  backdrop-filter: blur(5px);
+  background: linear-gradient(rgba(242, 242, 242, 0.65) 0, rgba(255, 255, 255, 0.7) 100%);
+  border-radius: 40px;
+  max-width: 290px;
+  padding: 26px 20px 26px 20px;
+  position: absolute;
+  top: -17px;
+  color: #000;
+  right: 9px !important;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 400;
+}
+
+@media screen and (max-height: 899px) {
+  .volvo {
+    bottom: -15%;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .main__text {
+    right: 114px;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .main__number {
+    max-width: 700px;
+    font-size: 246px;
+    line-height: 295px;
+    margin: 100px auto 0;
+  }
+  .main__text {
+    backdrop-filter: blur(5px);
+    background: linear-gradient(rgba(242, 242, 242, 0.65) 0, rgba(255, 255, 255, 0.7) 100%);
+    border-radius: 24px;
+    max-width: 392px;
+    padding: 26px 0px 26px 20px;
+    position: absolute;
+    top: 223px;
+    color: #000;
+    right: 202px !important;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 400;
+  }
 }
