--- a/css/main.css
+++ b/css/main.css
@@ -15,12 +15,6 @@
 
 /* Хэдер */
 
-.header {
-  max-width: 1472px;
-  margin: 0 auto;
-  padding: 0 16px;
-}
-
 .header__logo {
   position: absolute;
   top: 0;
@@ -83,7 +77,7 @@
   padding: 0 16px;
 }
 
-.title {
+.title__main {
   max-width: 762px;
   margin: 0px 120px 57px 15%;
 
@@ -147,12 +141,11 @@
 }
 
 .volvo {
-  display: flex;
-  flex: 0 0 auto;
   width: 100%;
-  position: fixed;
-  bottom: 0%;
-  left: 0%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   max-width: 200%;
   margin: 0 auto;
   z-index: -1;
@@ -165,11 +158,13 @@
 }
 
 @media screen and (max-width: 1140px) {
-  .header {
-    padding: 0;
-  }
   .header__menu {
     margin: 40px 10px 85px 12%;
+  }
+  .header__logo {
+    width: 150px;
+    height: 140px;
+    left: -15px;
   }
 }
 
@@ -180,12 +175,6 @@
 
   .container-mobile {
     display: block;
-  }
-
-  .header__logo {
-    width: 150px;
-    height: 140px;
-    left: -15px;
   }
 
   .nav__contacts {
@@ -202,7 +191,7 @@
     margin-top: 18px;
   }
 
-  .title {
+  .title__main {
     font-size: 42px;
     line-height: 50px;
 
@@ -222,7 +211,7 @@
     left: -10px;
   }
 
-  .title {
+  .title__main {
     font-size: 36px;
     line-height: 50px;
 
