--- a/css/price.css
+++ b/css/price.css
@@ -107,6 +107,10 @@
     color: #8E8E8E;
 }
 
+.pump__title-mobile {
+    display: none;
+}
+
 .pump__title {
     margin-bottom: 24px;
 
@@ -176,6 +180,15 @@
     .price__delivery_numbers {
         margin-bottom: 30px;
     }
+
+    .pump__title-desktop {
+        display: none;
+    }
+
+    .pump__title-mobile {
+        display: block;
+    }
+
 
     .pump__title {
         margin-top: 20px;
