--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 
 .header__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   list-style: none;
   padding: 0;
   margin: 0;
