стили в контактах и прайс

--- a/css/mainl885v.css
+++ b/css/mainl885v.css
@@ -1387,6 +1387,7 @@ label.error {
     margin-bottom: 20px;
   }
   .contact__text {
+    max-width: 344px;
     margin-bottom: 0;
   }
   .contact__production-block {
