--- a/css/gallery.css
+++ b/css/gallery.css
@@ -20,6 +20,7 @@ body {
 .gallery__wrapper {
     width: 100%;
     margin-top: 150px;
+    padding-top: 44px;
     padding-left: 24px;
     padding-right: 24px;
     -webkit-box-sizing: border-box;
