--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 .page {
-    background-color: #DEDEDE;
+    background-color: #e5e5e5;
 }
 
 .page__wrapper {
@@ -20,7 +20,6 @@ html, body {
 }
 
 .footer {
-  padding: 1em;
     /* max-width: 1440px; */
     margin: 0 auto;
   }
